# app.js
@@ -24,10 +24,10 @@ class App {
   }
 
   routes() {
-    this.app.use('/users', userRouter);
-    this.app.use('/products?', productRoute);
+    this.app.use('/user', userRouter);
+    this.app.use('/product', productRoute);
     this.app.use('/buy', buyRoute);
-    this.app.use('/api-docs', expressUi.serve, expressUi.setup(swaggerConfig));
+    this.app.use('/api-doc', expressUi.serve, expressUi.setup(swaggerConfig));
   }
 
   database() {
