# src/swagger.json
@@ -15,7 +15,7 @@
     }
   ],
   "paths": {
-    "/users": {
+    "/user": {
       "post": {
         "summary": "Cadastro de usuários",
         "description": "Esta rota será responsável por cadastrar usuários",
@@ -62,7 +62,7 @@
         }
       }
     },
-    "/users/getuser": {
+    "/user/getuser": {
       "post": {
         "summary": "Busca de um usuário",
         "description": "Esta rota será responsável por buscar um usuário pelo seu email",
@@ -102,16 +102,16 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                    "properties": {
-                      "name": {
-                        "type": "string",
-                        "description": "Nome do usuário"
-                      },
-                      "email": {
-                        "type": "string",
-                        "description": "Email do usuário"
-                      }
+                  "properties": {
+                    "name": {
+                      "type": "string",
+                      "description": "Nome do usuário"
+                    },
+                    "email": {
+                      "type": "string",
+                      "description": "Email do usuário"
                     }
+                  }
                 }
               }
             }
@@ -119,7 +119,7 @@
         }
       }
     },
-    "/users/login": {
+    "/user/login": {
       "post": {
         "summary": "Faz o login de um usuário",
         "description": "Esta rota será responsável por faze o login de um usuário pelo seu email e senha",
@@ -178,6 +178,67 @@
           }
         }
       }
+    },
+    "/product/all": {
+      "get": {
+        "summary": "Retorna todos os produtos",
+        "description": "Retorna um array com todos os produtos",
+        "tags": [
+          "Products"
+        ],
+        "responses": {
+          "404": {
+            "description": "Null."
+          },
+          "200": {
+            "description": "Retorna um array com todos os produtos do banco de dados.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "name": {
+                      "type": "string",
+                      "description": "Nome do produto"
+                    },
+                    "price": {
+                      "type": "number",
+                      "description": "Preço unitário do produto"
+                    },
+                    "quantity": {
+                      "type": "number",
+                      "description": "Quantidade de produtos disponíveis."
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/product": {
+      "post": {
+        "summary": "Retorna todos os produtos",
+        "description": "Retorna um array com todos os produtos",
+        "tags": [
+          "Products"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody":{},
+        "responses":{}
+      }
+    }
+  },
+  "securitySchemes": {
+    "bearerAuth": {
+      "type": "http",
+      "scheme": "bearer",
+      "bearerFormat": "JWT"
     }
   }
 }
